<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_web_home"
                android:title="@string/menu_title_home"
            android:visible="false"/>

           <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/menu_title_faq" />

            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_support"
                android:title="@string/menu_title_support" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_title_about" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_title_logout" />

    </group>

</menu>
