<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_tabicon"
        android:title="@string/menu_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nav_bookings"
        android:icon="@drawable/ic_booking"
        android:title="@string/menu_bookings"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/nav_takeaway"
        android:icon="@drawable/ic_takeaway"
        android:title="@string/menu_takeaway"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nav_dinein"
        android:icon="@drawable/ic_walkin"
        android:title="@string/menu_walkin"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="More"
        app:showAsAction="always|withText" />

</menu>